# brace-cast

./: CONTRIBUTING.md  Cargo.toml  Makefile.toml  README.md  azure-pipelines.yml  codecov.yml  rustfmt.toml  rusty-hook.toml
.github/workflows/: ci.yml
crates/brace-cast/: Cargo.toml
crates/brace-cast-macros/: Cargo.toml
crates/brace-cast-macros/src/: lib.rs  parse.rs  tagged_impl.rs  tagged_trait.rs
crates/brace-cast/src/: lib.rs  macros.rs  registry.rs
